Fix styles for carousel (aligning, font-size, display)

--- a/partials/content/carousel/carousel.css
+++ b/partials/content/carousel/carousel.css
@@ -2,7 +2,17 @@
   height: 350px;
 }
 
-.carousel-item-img {
+.carousel-caption {
+  top: 50%;
+  bottom: unset;
+  transform: translate(0, -50%);
+}
+
+.carousel-item__img {
   height: 100%;
   object-fit: cover;
+}
+
+.carousel-item__title {
+  font-size: 2rem;
 }
